deployment/kubernetes/kubernetes.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - image: mariadb:10.6.3
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-volumeclaim
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  type: ClusterIP
  ports:
    - port: 3306
  selector:
    app: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: advent
  labels:
    app: advent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: advent
  template:
    metadata:
      labels:
        app: advent
    spec:
      containers:
        - image: registry.amosgross.com/bpol_advent
          name: advent
          args:
          ports:
            - containerPort: 8080
              name: advent
---
apiVersion: v1
kind: Service
metadata:
  name: advent-service
  labels:
    app: advent
spec:
  selector:
    app: advent
  ports:
    - protocol: TCP
      port: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: advent-ingressroutenotls
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`advent.amosgross.com`)
    kind: Rule
    services:
    - name: advent-service
      port: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: advent-ingressroutetls
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`advent.amosgross.com`)
    kind: Rule
    services:
    - name: advent-service
      port: 8080
  tls:
    certResolver: myresolver
